tests/machine/x/go/group_by_left_join.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_by_left_join.go:80:9: non-boolean condition in if statement
../../../tests/machine/x/go/group_by_left_join.go:81:10: non-boolean condition in if statement

1: //go:build ignore
